website/versioned_docs/version-0.0.4/api/cloud/cloud.md
---
id: version-0.0.4-cloud
title: cloud package
hide_title: true
original_id: cloud
---
<!-- Do not edit this file. It is automatically generated by API Documenter. -->

[Cloud API Overview](overview) &gt; [@adpt/cloud](./cloud.md)

## cloud package

## Classes

|  Class | Description |
|  --- | --- |
|  [Compute](./cloud.compute.md) |  |
|  [Container](./cloud.container.md) | Abstract component representing a container. |
|  [DockerHost](./cloud.dockerhost.md) |  |
|  [ExternalDockerHost](./cloud.externaldockerhost.md) |  |
|  [LocalCompute](./cloud.localcompute.md) |  |
|  [LocalContainer](./cloud.localcontainer.md) |  |
|  [LocalDockerHost](./cloud.localdockerhost.md) |  |
|  [NetworkService](./cloud.networkservice.md) | An abstract component that represents a network service. |
|  [Service](./cloud.service.md) | An abstract component that represents a group of components that implements a service. Note that this is not necessarily a network service, but will often be. |

## Functions

|  Function | Description |
|  --- | --- |
|  [extendedHandle()](./cloud.extendedhandle.md) |  |
|  [handles()](./cloud.handles.md) |  |
|  [isContainerElement(el)](./cloud.iscontainerelement.md) | Function to check whether an  is an abstract [Container](./cloud.container.md)<!-- -->. |
|  [isNetworkServiceElement(el)](./cloud.isnetworkserviceelement.md) |  |
|  [mergeEnvPairs(envs)](./cloud.mergeenvpairs.md) | Combine multiple [Environment](./cloud.environment.md) objects into a single array of [EnvPair](./cloud.envpair.md) objects. Returns <code>undefined</code> if there are no <code>Environment</code> objects provided. |
|  [mergeEnvSimple(envs)](./cloud.mergeenvsimple.md) | Combine multiple [Environment](./cloud.environment.md) objects into a single [EnvSimple](./cloud.envsimple.md) object. Returns <code>undefined</code> if there are no <code>Environment</code> objects provided. |
|  [targetPort(elemOrProps)](./cloud.targetport.md) |  |
|  [useLatestImageFrom(source)](./cloud.uselatestimagefrom.md) | <b><i>(BETA)</i></b> Hook function to translate an [ImageId](./cloud.imageid.md) (which can be either a Handle or an image name string) into an image name string. |

## Interfaces

|  Interface | Description |
|  --- | --- |
|  [ComputeProps](./cloud.computeprops.md) |  |
|  [Config](./cloud.config.md) | Config for [ContainerStatus](./cloud.containerstatus.md) |
|  [ConnectToInstance](./cloud.connecttoinstance.md) | Components that provide a service, such as a database service or API service, can implement this interface in order to supply all the information required to connect to the service. |
|  [ContainerLabels](./cloud.containerlabels.md) | Labels for a [Container](./cloud.container.md) |
|  [ContainerNetwork](./cloud.containernetwork.md) | Network for [ContainerStatus](./cloud.containerstatus.md) |
|  [ContainerNetworkSettings](./cloud.containernetworksettings.md) | NetworkSettings for [ContainerStatus](./cloud.containerstatus.md) |
|  [ContainerProps](./cloud.containerprops.md) | Props for the [Container](./cloud.container.md) component. |
|  [ContainerState](./cloud.containerstate.md) | State information for a [Container](./cloud.container.md)<!-- -->. |
|  [ContainerStatus](./cloud.containerstatus.md) | Status of a [Container](./cloud.container.md)<!-- -->. |
|  [DockerHostProps](./cloud.dockerhostprops.md) |  |
|  [EnvPair](./cloud.envpair.md) | A single environment variable for a [Container](./cloud.container.md)<!-- -->, expressed as an object with <code>name</code> and <code>value</code> properties. |
|  [EnvSimple](./cloud.envsimple.md) | A set of environment variables for a [Container](./cloud.container.md)<!-- -->, expressed as a single object with keys and associated values. |
|  [ExtendedHandle](./cloud.extendedhandle.md) |  |
|  [ExternalDockerHostProps](./cloud.externaldockerhostprops.md) |  |
|  [Links](./cloud.links.md) | Network links to create for a [Container](./cloud.container.md)<!-- -->. |
|  [NetworkServiceProps](./cloud.networkserviceprops.md) |  |
|  [PortBinding](./cloud.portbinding.md) | A set of ports to be bound for a [Container](./cloud.container.md)<!-- -->. |
|  [ServiceProps](./cloud.serviceprops.md) |  |

## Namespaces

|  Namespace | Description |
|  --- | --- |
|  [ansible](./cloud.ansible.md) |  |
|  [aws](./cloud.aws.md) |  |
|  [docker](./cloud.docker.md) | Docker library for Adapt. |
|  [http](./cloud.http.md) |  |
|  [k8s](./cloud.k8s.md) |  |
|  [nginx](./cloud.nginx.md) |  |
|  [nodejs](./cloud.nodejs.md) | The library for [Node.js](https://nodejs.org) for Adapt. |
|  [postgres](./cloud.postgres.md) | The [Postgres](https://www.postgresql.org) library for Adapt. |

## Type Aliases

|  Type Alias | Description |
|  --- | --- |
|  [Command](./cloud.command.md) | A command to be used when creating a [Container](./cloud.container.md)<!-- -->. |
|  [Environment](./cloud.environment.md) | A set of environment variables for a [Container](./cloud.container.md)<!-- -->. |
|  [EnvPairs](./cloud.envpairs.md) | A set of environment variables for a [Container](./cloud.container.md)<!-- -->, expressed as an array of objects with <code>name</code> and <code>value</code> properties. |
|  [Handles](./cloud.handles.md) |  |
|  [ImageId](./cloud.imageid.md) | An image for a [Container](./cloud.container.md)<!-- -->. |
|  [LocalComputeProps](./cloud.localcomputeprops.md) |  |
|  [LocalContainerProps](./cloud.localcontainerprops.md) |  |
|  [NetworkServiceScope](./cloud.networkservicescope.md) |  |
|  [PortDescription](./cloud.portdescription.md) | Description of a network port for a [Container](./cloud.container.md)<!-- -->. |
|  [ServicePort](./cloud.serviceport.md) |  |
